--- a/startbootstrap-freelancer-master/index.html
+++ b/startbootstrap-freelancer-master/index.html
@@ -137,7 +137,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/catclicker.png" alt="">
+            <img class="img-fluid" src="img/portfolio/catclicker - Copy.png" alt="">
           </div>
         </div>
 
@@ -149,7 +149,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/surveyform.png" alt="">
+            <img class="img-fluid" src="img/portfolio/surveyform - Copy.png" alt="">
           </div>
         </div>
 
@@ -161,7 +161,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/feedreader.png" alt="">
+            <img class="img-fluid" src="img/portfolio/todolist.png" alt="">
           </div>
         </div>
 
@@ -264,9 +264,9 @@
   </footer>
 
   <!-- Copyright Section -->
-  <section class="copyright py-4 text-center text-white">
+  <section class="copyright py-4 text-center text-dark blue">
     <div class="container">
-      <!--<small>Copyright &copy; Your Website 2019</small>-->
+      <small><!--Copyright &copy; Your Website 2019-->Theme based on <a href="https://github.com/BlackrockDigital/startbootstrap-freelancer" class="credit text-dark blue">Freelancer</a></small>
     </div>
   </section>
 
@@ -420,7 +420,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://github.com/CedenoHernandez/Cat-Clicker"><img class="img-fluid rounded mb-5" src="img/portfolio/catclicker.png" alt="">
+                <a href="https://github.com/CedenoHernandez/Cat-Clicker"><img class="img-fluid rounded mb-5" src="img/portfolio/catclicker - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A demonstration of MVC delegation with eventHandlers.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -459,7 +459,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://github.com/CedenoHernandez/Survey-Form"><img class="img-fluid rounded mb-5" src="img/portfolio/surveyform.png" alt="">
+                <a href="https://github.com/CedenoHernandez/Survey-Form"><img class="img-fluid rounded mb-5" src="img/portfolio/surveyform - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">An example of buidling a form using pure HTML and CSS.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -488,7 +488,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Jasmine Test Suites</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Todo List</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -498,9 +498,9 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <a href="https://github.com/CedenoHernandez/FeedReadTesting"><img class="img-fluid rounded mb-5" src="img/portfolio/feedreader.png" alt="">
+                <a href="https://github.com/CedenoHernandez/todo-list"><img class="img-fluid rounded mb-5" src="img/portfolio/todolist.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Running test suites using Jasmine with provided Feed Reader from Udacity.</p>
+                <p class="mb-5">A React app that allows the user to keep track of necessary tasks</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
