Fix spelling mistakes

--- a/startbootstrap-freelancer-master/index.html
+++ b/startbootstrap-freelancer-master/index.html
@@ -53,7 +53,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars (5).svg" alt="">
+      <img class="masthead-avatar mb-5" src="img/headshot.png" alt="">
 
       <!-- Masthead Heading -->
 
@@ -461,7 +461,7 @@
                 <!-- Portfolio Modal - Image -->
                 <a href="https://github.com/CedenoHernandez/Survey-Form"><img class="img-fluid rounded mb-5" src="img/portfolio/surveyform - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">An example of buidling a form using pure HTML and CSS.</p>
+                <p class="mb-5">An example of building a form using pure HTML and CSS.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
