--- a/startbootstrap-freelancer-master/index.html
+++ b/startbootstrap-freelancer-master/index.html
@@ -306,6 +306,7 @@
                 <a href="https://github.com/CedenoHernandez/MemoryCardGame"><img class="img-fluid rounded mb-5" src="img/portfolio/memorygame - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A twist on the classic memory game 'Concentration', using JavaScript and DOM selectors</p>
+                <a class="demo" href='https://matchinggame17.netlify.com/' target="_blank">-Live Demo-</a><br><br>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -345,6 +346,7 @@
                 <a href="https://github.com/CedenoHernandez/ClassicArcadeGame"><img class="img-fluid rounded mb-5" src="img/portfolio/bugrun - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5"> A demonstration of object-oriented programming featuring a game loop engine.</p>
+                <a class="demo" href='https://arcadegame17.netlify.com/' target="_blank">-Live Demo-</a><br><br>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -423,6 +425,7 @@
                 <a href="https://github.com/CedenoHernandez/Cat-Clicker"><img class="img-fluid rounded mb-5" src="img/portfolio/catclicker - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A demonstration of MVC delegation with eventHandlers.</p>
+                <a class="demo" href='https://catclicker17.netlify.com/' target="_blank">-Live Demo-</a><br><br>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -462,6 +465,7 @@
                 <a href="https://github.com/CedenoHernandez/Survey-Form"><img class="img-fluid rounded mb-5" src="img/portfolio/surveyform - Copy.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">An example of building a form using pure HTML and CSS.</p>
+                <a class="demo" href='https://surveyform17.netlify.com/' target="_blank">-Live Demo-</a><br><br>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -501,6 +505,7 @@
                 <a href="https://github.com/CedenoHernandez/todo-list"><img class="img-fluid rounded mb-5" src="img/portfolio/todolist.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">A React app that allows the user to keep track of necessary tasks</p>
+                <a class="demo" href='https://todolist17.netlify.com/' target="_blank">-Live Demo-</a><br><br>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
